[tool.poetry]
name = "pycc"
version = "0.1.0"
description = ""
authors = ["Nyakku Shigure <sigure.qaq@gmail.com>"]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.9"
ansimarkup = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^21.11b1"
Cython = "^0.29.25"

[tool.poetry.scripts]
pycc = "pycc.__main__:main"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry_core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"
